{
  "version": 4,
  "terraform_version": "0.12.13",
  "serial": 2,
  "lineage": "4a364f6c-6f88-93cd-1157-1c5fd1910493",
  "resources": [
    {
      "mode": "data",
      "type": "aws_subnet",
      "name": "private",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nateip",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "DB",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "web",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "NATGW",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "priroute",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "pubroute",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "priroute",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pubroute",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "prisub",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pubsub",
      "each": "list",
      "provider": "provider.aws"
    }
  ]
}